--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -1,9 +1,9 @@
-{{define "subject"}}Welcome to the Comments Community!{{end}}
+{{define "subject"}}Welcome to the Books and More Community!{{end}}
 
 {{define "PlainBody"}}
 Hi,
 
-Thanks for signing up for a Comments Community account, We're excited to have you on board!
+Thanks for signing up for a Books and More Community account, We're excited to have you on board!
 
 For future reference, your user ID number is {{.userID}}.
 Please send a request to `PUT /v1/users/activated` endpoint with the following JSON body to activate your account:
@@ -27,7 +27,7 @@ The Comments Community Team
 
 <body>
     <p>Hi,</p>
-    <p>Thanks for signing up for a Comments Community account. We're excited 
+    <p>Thanks for signing up for a Books and More Community account. We're excited 
        to have you on board!</p>
     <p>For future reference, your user ID number is {{.userID}}.</p>
     <p>Please send a request to <code>`PUT /v1/users/activated`</code> endpoint with the following JSON body to activate your account:
